# yashiki

./: CLAUDE.md  Cargo.toml  Info.plist.template  LICENSE  README.md  install.sh  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
completions/zsh/: _yashiki
docs/: layout-engine.md  quick-start.md  window-rules.md  workarounds.md
resources/icon/: Assets.car
resources/icon/yashiki.icon/: icon.json
scripts/: ax-inspect-all.swift  ax-inspect.swift  build-app.sh
tatami/src/: main.rs
yashiki/: CHANGELOG.md  Cargo.toml
yashiki-ipc/: CHANGELOG.md  Cargo.toml
yashiki-ipc/src/: command.rs  event.rs  layout.rs  lib.rs  outer_gap.rs
yashiki-layout-byobu/: CHANGELOG.md  Cargo.toml
yashiki-layout-byobu/src/: main.rs
yashiki-layout-tatami/: CHANGELOG.md  Cargo.toml
yashiki-layout-tatami/src/: main.rs
yashiki/src/: app.rs  effect.rs  event.rs  event_emitter.rs  layout.rs  main.rs  platform.rs
yashiki/src/app/: channels.rs  command.rs  dispatch.rs  effects.rs  focus.rs  retile.rs  state_events.rs  sync_helper.rs
yashiki/src/core/: config.rs  display.rs  mod.rs  rules_engine.rs  state.rs  tag.rs  window.rs
yashiki/src/core/state/: display.rs  focus.rs  layout.rs  mod.rs  rules.rs  sync.rs  tags.rs
yashiki/src/ipc/: client.rs  event_server.rs  mod.rs  server.rs
yashiki/src/macos/: accessibility.rs  display.rs  hotkey.rs  mod.rs  mouse_tracker.rs  observer.rs  workspace.rs
