[workspace]
resolver = "2"
members = ["yashiki", "yashiki-ipc", "tatami"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dispatch = "0.2"
core-foundation = "0.10"
core-graphics = "0.25"
