[package]
name = "yashiki"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yashiki-ipc.path = "../yashiki-ipc"
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
dispatch.workspace = true
core-foundation.workspace = true
core-graphics.workspace = true
