[package]
name = "yashiki"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "macOS tiling window manager"

[dependencies]
yashiki-ipc.workspace = true
anyhow.workspace = true
argh = "0.1"
libc = "0.2"
dirs = "6"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
dispatch.workspace = true
core-foundation.workspace = true
core-foundation-sys.workspace = true
core-graphics.workspace = true
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString", "NSDictionary", "NSRunLoop"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSScreen", "NSApplication", "NSEvent"] }
nix = { version = "0.30", features = ["signal"] }
